--- a/dz7.html
+++ b/dz7.html
@@ -8,6 +8,7 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            max-width: 1000px;
         }
 
     
@@ -15,7 +16,7 @@
             text-align: center;
             border: 2px solid #d1d1d1;
             border-radius: 20%;
-            font-size: small;
+            /* font-size: small; */
             padding: 20px;
             margin: 0;
         }
@@ -49,43 +50,43 @@
 
     <div class="flex">
         <figure>
-            <img src="img4/Food_Pepper-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Pepper-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Pepper</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Apple-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Apple-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Apple</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Cheese-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Cheese-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Cheese</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Corn-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Corn-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Corn</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Mushroom-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Mushroom-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Mushroom</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Garlic-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Garlic-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Garlic</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Beef-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Beef-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Beef</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Fish-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Fish-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Fish</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Eggs-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Eggs-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Eggs</figcaption>
         </figure>
         <figure>
-            <img src="img4/Food_Coriander-128.png" width="80" height="80" alt="Pepper">
+            <img src="img4/Food_Coriander-128.png" width="120" height="120" alt="Pepper">
             <figcaption>Coriander</figcaption>
         </figure>
 
