--- a/dz9.html
+++ b/dz9.html
@@ -5,9 +5,40 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-transform: uppercase;
+    }
+
+    div {
+      display: flex;
+    }
+
+    main {
+      display: flex;
+    }
+
+    
+
+  </style>
 </head>
 <body>
   <a href="index.html">Home</a>
-  header footer
+  
+    <header>header</header>
+    <nav>menu</nav>
+    <div>
+      <aside>aside1</aside>
+      <aside>aside2</aside>
+      <main>
+        <section>section1</section>
+        <section>section2</section>
+      </main>
+      <aside>aside3</aside>
+    </div>
+    <footer>footer</footer>
+  
 </body>
 </html>
