--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       background-size: cover;
     }    
 
+    div {
+      max-height: 650px;
+    }
+
     a {
       background-color: blue;
       opacity: 0.5;
@@ -38,6 +42,7 @@
     .flex1 {
       display: flex;
       flex-direction: column;
+      flex-wrap: wrap;
       gap: 10px;
     }
   </style>
