--- a/dz8.html
+++ b/dz8.html
@@ -16,7 +16,8 @@
 
     figure {
       margin: 0;
-      width: -webkit-fill-available;
+      width: 100%;
+      box-sizing: border-box;
       display: flex;
       flex-direction: row;
       justify-content: center;
