--- a/index.html
+++ b/index.html
@@ -66,20 +66,24 @@
       <a href="dz13.html">home work 13</a>
     </div>
 
-    <div class="flex1">
-      <a href="pz1.html">practical work 1</a>
-      <a href="pz2.html">practical work 2</a>
-      <a href="pz3.html">practical work 3</a>
-      <a href="pz4.html">practical work 4</a>
-      <a href="pz5.html">practical work 5</a>
-      <a href="pz6.html">practical work 6</a>
-      <a href="pz7.html">practical work 7</a>
-      <a href="pz8.html">practical work 8</a>
-      <a href="pz9.html">practical work 9</a>
-      <a href="pz10.html">practical work 10</a>
-      <a href="pz11.html">practical work 11</a>
-      <a href="pz12.html">practical work 12</a>
-      <a href="pz13.html">practical work 13</a>      
+    <div class="flex">
+      <div class="flex1">
+        <a href="pz13.html">practical work 13</a>      
+      </div>
+      <div class="flex1">
+        <a href="pz1.html">practical work 1</a>
+        <a href="pz2.html">practical work 2</a>
+        <a href="pz3.html">practical work 3</a>
+        <a href="pz4.html">practical work 4</a>
+        <a href="pz5.html">practical work 5</a>
+        <a href="pz6.html">practical work 6</a>
+        <a href="pz7.html">practical work 7</a>
+        <a href="pz8.html">practical work 8</a>
+        <a href="pz9.html">practical work 9</a>
+        <a href="pz10.html">practical work 10</a>
+        <a href="pz11.html">practical work 11</a>
+        <a href="pz12.html">practical work 12</a>
+      </div>
     </div>
   </div>
 
