--- a/dz9.html
+++ b/dz9.html
@@ -30,8 +30,10 @@
     <header>header</header>
     <nav>menu</nav>
     <div>
-      <aside>aside1</aside>
-      <aside>aside2</aside>
+      <div>
+        <aside>aside1</aside>
+        <aside>aside2</aside>
+      </div>
       <main>
         <section>section1</section>
         <section>section2</section>
