--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-between;
+      gap: 10px;
     }
 
     .flex1 {
@@ -51,38 +52,43 @@
 <body>
   <div class="flex">
     <div class="flex1">
-      <a href="dz1.html">home work 1</a>
-      <a href="dz2.html">home work 2</a>
-      <a href="dz3.html">home work 3</a>
-      <a href="dz4.html">home work 4</a>
-      <a href="dz5.html">home work 5</a>
-      <a href="dz6.html">home work 6</a>
-      <a href="dz7.html">home work 7</a>
-      <a href="dz8.html">home work 8</a>
-      <a href="dz9.html">home work 9</a>
-      <a href="dz10.html">home work 10</a>
-      <a href="dz11.html">home work 11</a>
-      <a href="dz12.html">home work 12</a>
-      <a href="dz13.html">home work 13</a>
+      <a href="dz1.1.html">home work 1.1</a>
+      <a href="dz1.2.html">home work 1.2</a>
+      <a href="dz1.3.html">home work 1.3</a>
+      <a href="dz2.1.html">home work 2.1</a>
+      <a href="dz2.2.html">home work 2.2</a>
+      <a href="dz2.3.html">home work 2.3</a>
+      <a href="dz3.1.html">home work 3.1</a>
+      <a href="dz3.2.html">home work 3.2</a>
+      <a href="dz3.3.html">home work 3.3</a>
+      <a href="dz3.4.html">home work 3.4</a>
+      <a href="dz4.1.html">home work 4.1</a>
+      <a href="dz4.2.html">home work 4.2</a>
+      <a href="dz4.3.html">home work 4.3</a>
+      <a href="dz5.1.html">home work 5.1</a>
+      <a href="dz5.2.html">home work 5.2</a>
+      <a href="dz5.3.html">home work 5.3</a>
     </div>
 
     <div class="flex">
-      <div class="flex1">
-        <a href="pz13.html">practical work 13</a>      
+      <div class="flex1">        
+        <a href="pz5.1.html">practical work 5.1</a>
+        <a href="pz5.2.html">practical work 5.2</a>
+        <a href="pz5.3.html">practical work 5.3</a>      
       </div>
       <div class="flex1">
-        <a href="pz1.html">practical work 1</a>
-        <a href="pz2.html">practical work 2</a>
-        <a href="pz3.html">practical work 3</a>
-        <a href="pz4.html">practical work 4</a>
-        <a href="pz5.html">practical work 5</a>
-        <a href="pz6.html">practical work 6</a>
-        <a href="pz7.html">practical work 7</a>
-        <a href="pz8.html">practical work 8</a>
-        <a href="pz9.html">practical work 9</a>
-        <a href="pz10.html">practical work 10</a>
-        <a href="pz11.html">practical work 11</a>
-        <a href="pz12.html">practical work 12</a>
+        <a href="pz1.1.html">practical work 1.1</a>
+        <a href="pz1.2.html">practical work 1.2</a>
+        <a href="pz1.3.html">practical work 1.3</a>
+        <a href="pz2.1.html">practical work 2.1</a>
+        <a href="pz2.2.html">practical work 2.2</a>
+        <a href="pz2.3.html">practical work 2.3</a>
+        <a href="pz3.1.html">practical work 3.1</a>
+        <a href="pz3.2.html">practical work 3.2</a>
+        <a href="pz3.3.html">practical work 3.3</a>
+        <a href="pz4.1.html">practical work 4.1</a>
+        <a href="pz4.2.html">practical work 4.2</a>
+        <a href="pz4.3.html">practical work 4.3</a>        
       </div>
     </div>
   </div>
