--- a/dz3.2.html
+++ b/dz3.2.html
@@ -47,19 +47,19 @@
   <a href="index.html">Home</a>
   <div class="flex">
     <figure>
-      <img src="/img4/edit.png" width=40px>
+      <img src="img4/edit.png" width=40px>
       <figcaption>edit</figcaption>
     </figure>    
     <figure>
-      <img src="/img4/favorites.png" width=40px>
+      <img src="img4/favorites.png" width=40px>
       <figcaption>favorites</figcaption>
     </figure>
     <figure>
-      <img src="/img4/history.png" width=40px>
+      <img src="img4/history.png" width=40px>
       <figcaption>history</figcaption>
     </figure>
     <figure>
-      <img src="/img4/heart.png" width=40px>
+      <img src="img4/heart.png" width=40px>
       <figcaption>security</figcaption>
     </figure>
   </div>
