--- a/dz1.1.html
+++ b/dz1.1.html
@@ -41,7 +41,8 @@
   
   <h3>GREGORY</h3>
   
-  No, for then we should be colliers.<br>
+  No, for then we should be colliers.<br><br>
+  
 </body>
 
 </html>
