--- a/dz3.4.html
+++ b/dz3.4.html
@@ -65,7 +65,7 @@
 </head>
 
 <body>
-  <a href="index.html">Home</a>
+  <a href="index.html" style="color: black;">Home</a><br><br>
   <div>
     <div class="flex1">
       <div class="flex2">
