--- a/dz4.2.html
+++ b/dz4.2.html
@@ -1,13 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    h1 {
+      text-transform: uppercase;
+      position: absolute;
+      left: 46%;
+      top: 40%;
+      z-index: -1;
+    }
+
+    div {
+      background-color: #872d62;
+      width: 350px;
+      height: 200px;
+      border: 2px solid #651142;
+    }
+
+    div:hover {
+      animation: open 1s;
+    }
+
+    .flexLeft {
+      display: flex;
+      position: absolute;
+      top: 30%;
+      left: 25%;
+    }
+    .flexRight {
+      display: flex;
+      position: absolute;
+      top: 30%;
+      left: 51%;
+    }
+    .open_Left {      
+      transform-origin: left center;
+      
+    }
+
+    .open_Right {
+      transform-origin: right center;
+    }
+
+    @keyframes open {
+      from {
+        transform: rotate(0deg);
+      }
+
+      to {
+        transform: rotate(180deg);
+      }
+    }
+  </style>
 </head>
+
 <body>
   <a href="index.html">Home</a>
-  doors
+  <h1>hello</h1>
+  
+    <div class="flexLeft open_Left"></div>
+    <div class="flexRight open_Right"></div>
+  
 </body>
+
 </html>
