--- a/dz4.2.html
+++ b/dz4.2.html
@@ -30,13 +30,13 @@
       display: flex;
       position: absolute;
       top: 30%;
-      left: 25%;
+      left: 31%;
     }
     .flexRight {
       display: flex;
       position: absolute;
       top: 30%;
-      left: 51%;
+      left: 50%;
     }
     .open_Left {      
       transform-origin: left center;
@@ -45,26 +45,17 @@
 
     .open_Right {
       transform-origin: right center;
-    }
-
-    @keyframes open {
-      from {
-        transform: rotate(0deg);
-      }
-
-      to {
-        transform: rotate(180deg);
-      }
-    }
+    }    
   </style>
 </head>
 
 <body>
   <a href="index.html">Home</a>
   <h1>hello</h1>
-  
+  <div>
     <div class="flexLeft open_Left"></div>
     <div class="flexRight open_Right"></div>
+  </div>
   
 </body>
 
