--- a/dz4.2.html
+++ b/dz4.2.html
@@ -8,55 +8,62 @@
   <title>Document</title>
   <style>
     h1 {
+      margin: 0;
+      padding-top: 12%;
       text-transform: uppercase;
       position: absolute;
-      left: 46%;
-      top: 40%;
       z-index: -1;
+      left: 42%;
     }
 
-    div {
-      background-color: #872d62;
+    div div {
+      background-color: #872d61;
       width: 350px;
       height: 200px;
       border: 2px solid #651142;
     }
 
-    div:hover {
-      animation: open 1s;
+
+    .flex {
+      display: flex;
+      justify-content: center;
     }
 
-    .flexLeft {
-      display: flex;
-      position: absolute;
-      top: 30%;
-      left: 31%;
-    }
-    .flexRight {
-      display: flex;
-      position: absolute;
-      top: 30%;
-      left: 50%;
-    }
-    .open_Left {      
+    .left {
       transform-origin: left center;
-      
     }
 
-    .open_Right {
+    .right {
       transform-origin: right center;
-    }    
+    }
+
+    .center {
+      position: relative;
+      perspective: 1000px;
+      text-align: center;
+      width: 700px;
+      margin: 0 auto;
+    }
+
+    .center:hover .left {
+      transform: rotateY(60deg);
+    }
+
+    .center:hover .right {
+      transform: rotateY(-60deg);
+
+    }
   </style>
 </head>
 
 <body>
   <a href="index.html">Home</a>
-  <h1>hello</h1>
-  <div>
-    <div class="flexLeft open_Left"></div>
-    <div class="flexRight open_Right"></div>
+  <div class="flex center">
+    <h1>hello</h1>
+    <div class="left"></div>
+    <div class="right"></div>
   </div>
-  
+
 </body>
 
 </html>
