--- a/dz4.3.html
+++ b/dz4.3.html
@@ -8,6 +8,20 @@
 </head>
 <body>
   <a href="index.html">Home</a>
-  blocks
+  <div>
+    <div>
+      <div></div>
+      <div></div>
+    </div>
+    <div>
+      <div></div>
+      <div></div>
+    </div>
+    <div>
+      <div></div>
+      <div></div>
+    </div>
+
+  </div>
 </body>
 </html>
