--- a/dz1.1.html
+++ b/dz1.1.html
@@ -6,16 +6,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="nav.css">
+  <style>
+    body {
+      padding: 10px;
+    }    
+  </style>
 </head>
 
 <body>
-  <a href="index.html">Home</a>
+  <div class="flexNav">    
+    <div><a href="index.html">Home</a></div>
+    <div style="color: red;">dz1.1</div>
+    <div><a href="dz1.2.html">Next</a></div>
+  </div>
   <h1>Romeo and Juliet</h1>
 
-  <h2>ACT 1</h2>  
+  <h2>ACT 1</h2>
 
   <h2>PROLOGUE</h2>
-  
+
   Two households, both alike in dignity,<br>
   In fair Verona, where we lay our scene,<br>
   From ancient grudge break to new mutiny,<br>
@@ -30,19 +40,19 @@
   Is now the two hours' traffic of our stage;<br>
   The which if you with patient ears attend,<br>
   What here shall miss, our toil shall strive to mend. <br>
-  
+
   <h2>SCENE I. Verona. A public place.</h2>
-  
+
   <small><small>SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers</small></small> <br>
-  
+
   <h3>SAMPSON</h3>
-  
+
   Gregory, o' my word, we'll not carry coals.<br>
-  
+
   <h3>GREGORY</h3>
-  
+
   No, for then we should be colliers.<br><br>
-  
+
 </body>
 
 </html>
