--- a/dz2.1.html
+++ b/dz2.1.html
@@ -10,8 +10,10 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       max-width: 500px;
+      padding: 10px;
+      margin: 0;
     }
-
+    
     ol {
       list-style-position: inside;
       background-color: #ed9eae;
@@ -33,10 +35,16 @@
       color: white;
     }
   </style>
+<link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-  <a href="index.html">Home</a>
+  <div class="flexNav">
+    <div><a href="index.html">Home</a></div>
+    <div><a href="dz1.3.html">Previous</a></div>
+    <div style="color: red;">dz2.1</div>
+    <div><a href="dz2.2.html">Next</a></div>
+</div>
 
   <ol>
     <li><mark>Apple</mark> </li>
