--- a/dz3.1.html
+++ b/dz3.1.html
@@ -9,6 +9,8 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             max-width: 1000px;
+            padding: 10px;
+            margin: 0;
         }
 
     
@@ -40,11 +42,17 @@
             justify-content: flex-start;
             gap: 20px;
         }
-    </style>
+        </style>
+        <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-    <a href="index.html">Home</a>
+    <div class="flexNav">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="dz2.3.html">Previous</a></div>
+        <div style="color: red;">dz3.1</div>
+        <div><a href="dz3.2.html">Next</a></div>
+    </div>
 
     <h1>What do I have in my fridge</h1>
 
