--- a/dz4.2.html
+++ b/dz4.2.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    body {
+      padding: 10px;
+      margin: 0;
+    }
+
     h1 {
       margin: 0;
       padding-top: 12%;
@@ -54,10 +59,16 @@
 
     }
   </style>
+<link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-  <a href="index.html">Home</a>
+  <div class="flexNav">
+    <div><a href="index.html">Home</a></div>
+    <div><a href="dz4.1.html">Previous</a></div>
+    <div style="color: red;">dz4.2</div>
+    <div><a href="dz4.3.html">Next</a></div>
+  </div>
   <div class="flex center">
     <h1>hello</h1>
     <div class="left"></div>
