--- a/dz5.3.html
+++ b/dz5.3.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            padding: 10px;
+            margin: 0;
+        }
+    </style>
+    <link rel="stylesheet" href="nav.css">
 </head>
+
 <body>
-    <a href="index.html">Home</a>
+    <div class="flexNav">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="dz5.2.html">Previous</a></div>
+        <div style="color: red;">dz5.3</div>
+        <div><a href="dz1.1.html">Next</a></div>
+    </div>
 </body>
+
 </html>
