--- a/dz1.1.html
+++ b/dz1.1.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
+  
+  <head>
+    <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="nav.css">
   <style>
     body {
       padding: 10px;
+      margin: 0;
     }    
-  </style>
+    </style>
+<link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
@@ -20,6 +21,7 @@
     <div style="color: red;">dz1.1</div>
     <div><a href="dz1.2.html">Next</a></div>
   </div>
+  
   <h1>Romeo and Juliet</h1>
 
   <h2>ACT 1</h2>
@@ -52,6 +54,7 @@
   <h3>GREGORY</h3>
 
   No, for then we should be colliers.<br><br>
+
 
 </body>
 
