--- a/dz1.2.html
+++ b/dz1.2.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+            padding: 10px;
+            margin: 0;
+        }
+
         div {
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             max-width: 400px;
@@ -22,7 +27,7 @@
 
 
         .red {
-            
+
             font-size: 20px;
             color: red;
             background-color: #e0e0e0;
@@ -43,15 +48,22 @@
             padding-bottom: 10px;
 
         }
+
         div span {
             display: inline-block;
             margin-bottom: 5px;
         }
-    </style>
+        </style>
+        <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-    <a href="index.html">Home</a><br>
+    <div class="flexNav">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="dz1.1.html">Previous</a></div>
+        <div style="color: red;">dz1.2</div>
+        <div><a href="dz1.3.html">Next</a></div>
+    </div>
     <div>
         <p>Player 1:</p>
         <span class="black">2&clubs;</span>
