--- a/dz1.3.html
+++ b/dz1.3.html
@@ -8,6 +8,8 @@
     <style>
         body {
             max-width: 760px;
+            padding: 10px;
+            margin: 0;
             background-color: #f5f5f5;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
@@ -23,7 +25,7 @@
         mark {
             background-color: #e7e7e7;
         }
-
+        
         .alignCentr {
             text-align: center;
         }
@@ -47,11 +49,17 @@
             color: #60abaf;
         }
     </style>
+    <link rel="stylesheet" href="nav.css">
 </head>
 
 
 <body>
-    <a href="index.html">Home</a>
+    <div class="flexNav">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="dz1.2.html">Previous</a></div>
+        <div style="color: red;">dz1.3</div>
+        <div><a href="dz2.1.html">Next</a></div>
+    </div>
     <h1 class="alignCentr">HTML Tutorial</h1>
 
     <hr class="rule1">
