--- a/dz2.2.html
+++ b/dz2.2.html
@@ -7,9 +7,11 @@
     <title>Document</title>
     <style>
         body {
+            padding: 10px;
+            margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-
+        
         div {
             background-color: #f5f5f5;
             max-width: 500px;
@@ -53,10 +55,16 @@
             color: red;
         }
     </style>
+<link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-    <a href="index.html">Home</a>
+    <div class="flexNav">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="dz2.1.html">Previous</a></div>
+        <div style="color: red;">dz2.2</div>
+        <div><a href="dz2.3.html">Next</a></div>
+    </div>
     <div>
         <h2>My To Do List</h2>
         <ul>
