--- a/dz2.3.html
+++ b/dz2.3.html
@@ -7,6 +7,8 @@
     <title>Document</title>
     <style>
         body {
+            padding: 10px;
+            margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
@@ -29,10 +31,16 @@
             color: #7c78c6;
         }
     </style>
+            <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-    <a href="index.html">Home</a>
+    <div class="flexNav">
+        <div><a href="index.html">Home</a></div>
+        <div><a href="dz2.2.html">Previous</a></div>
+        <div style="color: red;">dz2.3</div>
+        <div><a href="dz3.1.html">Next</a></div>
+    </div>
 
     <h3>TAG</h3>
     [tæg]<br>
