--- a/dz3.3.html
+++ b/dz3.3.html
@@ -9,6 +9,8 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding: 10px;
+      margin: 0;
     }
 
     div {    
@@ -53,7 +55,7 @@
       flex-direction: column;
       gap: 10px;
     }
-
+    
     .flex2 {
       display: flex;
       justify-content: space-between;
@@ -72,11 +74,17 @@
       flex-direction: column;
       gap: 10px;
     }
-  </style>
+    </style>
+    <link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-  <a href="index.html">Home</a><br><br>
+  <div class="flexNav">
+    <div><a href="index.html">Home</a></div>
+    <div><a href="dz3.2.html">Previous</a></div>
+    <div style="color: red;">dz3.3</div>
+    <div><a href="dz3.4.html">Next</a></div>
+</div>
   <div class="flex1">
     <header>header</header>
     <nav>menu</nav>
