--- a/dz3.4.html
+++ b/dz3.4.html
@@ -10,6 +10,8 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: black;
+      padding: 10px;
+      margin: 0;
     }
 
     div {
@@ -56,16 +58,22 @@
     img:hover {
       filter: grayscale(0);
     }
-
+    
     a:hover {
       text-decoration: underline;
       color: white;
     }
   </style>
+<link rel="stylesheet" href="nav.css">
 </head>
 
 <body>
-  <a href="index.html" style="color: black;">Home</a><br><br>
+  <div class="flexNav" style="color: black;">
+    <div><a href="index.html">Home</a></div>
+    <div><a href="dz3.3.html">Previous</a></div>
+    <div style="color: red;">dz3.4</div>
+    <div><a href="dz4.1.html">Next</a></div>
+</div>
   <div>
     <div class="flex1">
       <div class="flex2">
