--- a/dz4.3.html
+++ b/dz4.3.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    body {
+      padding: 10px;
+      margin: 0;
+    }
+  </style>
+  <link rel="stylesheet" href="nav.css">
 </head>
+
 <body>
-  <a href="index.html">Home</a>
+  <div class="flexNav">
+    <div><a href="index.html">Home</a></div>
+    <div><a href="dz4.2.html">Previous</a></div>
+    <div style="color: red;">dz4.3</div>
+    <div><a href="dz5.1.html">Next</a></div>
+  </div>
   <div>
     <div>
       <div></div>
@@ -24,4 +38,5 @@
 
   </div>
 </body>
+
 </html>
